objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>AccessionNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accession #</label>
        <referenceTo>Guardant_360_Sample__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acct_AE_Email__c</fullName>
        <formula>PhysicianAccount__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct AE Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Owner_Email__c</fullName>
        <label>Acct Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - DOB__c )/365.2425)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Days_Between_Samples__c</fullName>
        <formula>(Last_Sample_Recd__c - First_Sample_Received__c)/Number_of_Samples__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Days Between Samples</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan</fullName>
                </value>
                <value>
                    <fullName>Institutional Billing</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Requesting Physician</fullName>
                </value>
                <value>
                    <fullName>Financial Indigent</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Clinical Utility</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Pharma</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Proficiency</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Promotional	 Quality Testing</fullName>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan No OOP</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Patient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASESAFEID_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CASESAFEID(Id)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTA_Contact_Attempted_Match_Key_s__c</fullName>
        <description>Match records where CTA Contact Attempted is checked</description>
        <inlineHelpText>Match records where CTA Contact Attempted is checked</inlineHelpText>
        <label>CTA Contact Attempted Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTA_Contact_Attempted__c</fullName>
        <formula>!ISBLANK(CTA_Contact_Attempted_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTA Contact Attempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTA_Contacted_Attempted_Date__c</fullName>
        <label>CTA Contacted Attempted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXL_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Patient has requested cancel G360.</description>
        <label>CXL Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancer_Type__c</fullName>
        <label>Cancer Type</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Match_Key_s__c</fullName>
        <description>Match records where Closed is checked</description>
        <inlineHelpText>Match records where Closed is checked</inlineHelpText>
        <label>Closed Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>!ISBLANK(Closed_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>INS Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Record_Last_Changed__c</fullName>
        <label>Date Record Last Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <description>blood collection</description>
        <label>Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_between_1st_and_last_samples__c</fullName>
        <formula>Last_Sample_Recd__c - First_Sample_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between 1st and last samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_Date__c</fullName>
        <label>Enrolled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled_Match_Key_s__c</fullName>
        <description>Match records where Enrolled is checked</description>
        <inlineHelpText>Match records where Enrolled is checked</inlineHelpText>
        <label>Enrolled Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled__c</fullName>
        <formula>!ISBLANK(Enrolled_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_OOP__c</fullName>
        <description>Used to calculate patient&apos;s expected cost post-FAP.</description>
        <label>Patient Expected OOP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sample_Received__c</fullName>
        <description>Date first sample was received. Autopopulated by Rollup Helper.</description>
        <label>First Sample Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c + &quot; &quot; + Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HHS__c</fullName>
        <inlineHelpText>Household Size</inlineHelpText>
        <label>HHS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ICD_Code__c</fullName>
        <label>ICD Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informed_Date__c</fullName>
        <label>Informed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Informed_Match_Key_s__c</fullName>
        <description>Match records where Informed is checked</description>
        <inlineHelpText>Match records where Informed is checked</inlineHelpText>
        <label>Informed Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informed__c</fullName>
        <formula>!ISBLANK(Informed_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Date__c</fullName>
        <label>Initial Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Notes__c</fullName>
        <label>Initial Contact Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Result__c</fullName>
        <label>Initial Contact Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelation requested</fullName>
                </value>
                <value>
                    <fullName>Escalation requested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Patient deceased</fullName>
                </value>
                <value>
                    <fullName>Patient was unreachable</fullName>
                </value>
                <value>
                    <fullName>Patient will call back</fullName>
                </value>
                <value>
                    <fullName>Patient will proceed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LIMS_Accession_Number__c</fullName>
        <label>LIMS Accession Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIMS_Patient_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>LIMS Patient Record ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Ditch_Email_Replied_Date__c</fullName>
        <label>Last Ditch Email Replied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Ditch_Email_Sent_Date__c</fullName>
        <label>Last Ditch Email Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Ditch_Email_Sent_Match_Key_s__c</fullName>
        <description>Match records where Last Ditch Email Sent is checked</description>
        <inlineHelpText>Match records where Last Ditch Email Sent is checked</inlineHelpText>
        <label>Last Ditch Email Sent Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Ditch_Email_Sent__c</fullName>
        <formula>!ISBLANK(Last_Ditch_Email_Sent_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Ditch Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sample_Recd__c</fullName>
        <formula>AccessionNumber__r.Date_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Sample Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MRN__c</fullName>
        <description>Medical Record Number</description>
        <label>MRN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples__c</fullName>
        <label>Number of Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_Read_Date__c</fullName>
        <label>Outreach Email Read Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_Read_Match_Key_s__c</fullName>
        <description>Match records where Outreach Email Read is checked</description>
        <inlineHelpText>Match records where Outreach Email Read is checked</inlineHelpText>
        <label>Outreach Email Read Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_Read__c</fullName>
        <formula>!ISBLANK(Outreach_Email_Read_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach Email Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_Replied_Date__c</fullName>
        <label>Outreach Email Replied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_Sent_Date__c</fullName>
        <label>Outreach Email Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_Sent_Match_Key_s__c</fullName>
        <description>Match records where Outreach Email Sent is checked</description>
        <inlineHelpText>Match records where Outreach Email Sent is checked</inlineHelpText>
        <label>Outreach Email Sent Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_Sent__c</fullName>
        <formula>!ISBLANK(Outreach_Email_Sent_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFA_Gross__c</fullName>
        <label>PFA Gross</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Patient_Benefits_Authorization__c</fullName>
        <label>Patient Benefits Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Unsigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <displayFormat>PID-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Patient_Initials__c</fullName>
        <formula>LEFT( First_Name__c, 1)+LEFT( Last_Name__c , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Opted_In__c</fullName>
        <formula>ISPICKVAL(Patient_Benefits_Authorization__c,&quot;Signed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Opted In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perm_to_Conn_With_Pharma_Match_Key_s__c</fullName>
        <description>Match records where Permission to Connect With Pharma is checked</description>
        <inlineHelpText>Match records where Permission to Connect With Pharma is checked</inlineHelpText>
        <label>Perm to Conn With Pharma Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_to_Connect_with_Pharma_Date__c</fullName>
        <label>Permission to Connect with Pharma Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permission_to_Connect_with_Pharma__c</fullName>
        <formula>!ISBLANK(Perm_to_Conn_With_Pharma_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permission to Connect with Pharma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pharma_PTC_Alert_Date__c</fullName>
        <label>Pharma PTC Alert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pharma_PTC_Alert_Match_Key_s__c</fullName>
        <description>Match records where Pharma PTC Alert Sent is checked</description>
        <inlineHelpText>Match records where Pharma PTC Alert Sent is checked</inlineHelpText>
        <label>Pharma PTC Alert Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharma_PTC_Alert__c</fullName>
        <formula>!ISBLANK(Pharma_PTC_Alert_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pharma PTC Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhysicianAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patients (Physician Account)</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physician_Account_Name__c</fullName>
        <formula>PhysicianAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Group_Plan_Number__c</fullName>
        <label>Group Plan Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Identification_Number__c</fullName>
        <label>Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_Address__c</fullName>
        <label>Address</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_Co_Name_Text__c</fullName>
        <formula>Primary_Ins_Co_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Insurance Company Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_Co_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Insurance Company Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Payor Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Insurance</relationshipLabel>
        <relationshipName>PtInsCo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_Member_DOB__c</fullName>
        <label>Member DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_Member_Name__c</fullName>
        <label>Member Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_Price__c</fullName>
        <formula>Primary_Ins_Co_Name__r.Contracted_Price__c</formula>
        <label>Primary Ins Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_Relationship_To_Patient__c</fullName>
        <label>Relationship To Patient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Ins_State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Ins_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>State Funded</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Ins_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Medical_Group_Name__c</fullName>
        <label>Medical Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_to_ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push to ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reached_Provider_Date__c</fullName>
        <label>Reached Provider Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reached_Provider_Match_Key_s__c</fullName>
        <description>Match records where Reached Provider is checked</description>
        <inlineHelpText>Match records where Reached Provider is checked</inlineHelpText>
        <label>Reached Provider Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reached_Provider__c</fullName>
        <formula>!ISBLANK(Reached_Provider_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reached Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recalculate_Match_Admin_Panel__c</fullName>
        <formula>HYPERLINK(&apos;/apex/vfMatchAdminPanelRecalculate?id=&apos;+Id, &apos;Recalculate&apos;,&apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate Match Admin Panel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Physician__c</fullName>
        <label>Related Physician</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replied_to_Last_Ditch_Email_Match_Key_s__c</fullName>
        <description>Match records where Replied to Last Ditch Email is checked</description>
        <inlineHelpText>Match records where Replied to Last Ditch Email is checked</inlineHelpText>
        <label>Replied to Last Ditch Email Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replied_to_Last_Ditch_Email__c</fullName>
        <formula>!ISBLANK(Replied_to_Last_Ditch_Email_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replied to Last Ditch Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replied_to_Outreach_Email_Match_Key_s__c</fullName>
        <description>Match records where Replied to Outreach Email is checked</description>
        <inlineHelpText>Match records where Replied to Outreach Email is checked</inlineHelpText>
        <label>Replied to Outreach Email Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replied_to_Outreach_Email__c</fullName>
        <formula>!ISBLANK(Replied_to_Outreach_Email_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replied to Outreach Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Type__c</fullName>
        <formula>Text(AccessionNumber__r.Request_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screened_Date__c</fullName>
        <label>Screened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Screened_Match_Key_s__c</fullName>
        <description>Match records where Screened is checked</description>
        <inlineHelpText>Match records where Screened is checked</inlineHelpText>
        <label>Screened  Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screened__c</fullName>
        <formula>!ISBLANK(Screened_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Group_Plan_Number__c</fullName>
        <label>Group Plan Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Identification_Number__c</fullName>
        <label>Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Address__c</fullName>
        <label>Address</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Member_DOB__c</fullName>
        <label>Member DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Member_Name__c</fullName>
        <label>Member Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Relationship_To_Patient__c</fullName>
        <label>Relationship To Patient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Ins_State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Zip_Code_del__c</fullName>
        <label>Zip Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Insurance Company Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Payor Account</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patients (Secondary Insurance Company Name)</relationshipLabel>
        <relationshipName>Pt2ndInsCo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Medical_Group_Name__c</fullName>
        <label>Medical Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_ins_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondaty_Ins_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>State Funded</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_to_Customer_Date__c</fullName>
        <description>Earliest Show to Customer Date</description>
        <inlineHelpText>Earliest Show to Customer Date</inlineHelpText>
        <label>Show to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_to_Customer_Match_Key_s__c</fullName>
        <description>Match records where show to customer is checked</description>
        <inlineHelpText>Match records where show to customer is checked</inlineHelpText>
        <label>Show to Customer Match Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_to_Customer__c</fullName>
        <formula>!ISBLANK(Show_to_Customer_Match_Key_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Line_2__c</fullName>
        <label>Street Line 2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <defaultValue>&quot;505 Penobscot Dr&quot;</defaultValue>
        <label>Street Line 1</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Gross__c</fullName>
        <label>WF Gross</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Residual_Income__c</fullName>
        <label>Yearly Residual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>CSBA_Patient</fullName>
        <filterScope>Queue</filterScope>
        <label>CSBA</label>
        <queue>CSBA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>